--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,7 @@ layout: default
         <div class="post">
 
           <header class="post-header">
-            <h1 class="post-title">{{}}</h1>
+            <h1 class="post-title">{{ page.title }}</h1> <!-- included in there before (removes it from page): page.title -->
             <p class="post-description">{{ page.description }}</p>
           </header>
 
